--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,9 @@
   "author": "The Programming Club",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "mongoose": "^6.8.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
