--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "author": "The Programming Club",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.8.0"
