--- a/server/package.json
+++ b/server/package.json
@@ -11,11 +11,11 @@
   "author": "The Programming Club",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^6.8.0"
-  },
-  "devDependencies": {
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.8.0",
     "nodemon": "^2.0.20"
   }
 }
