--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -3,7 +3,7 @@ name: Prettier
 # This action works with pull requests and pushes
 on:
     pull_request:
-        # push:
+        push:
         branches:
             - main
 
