--- a/.github/workflows/contributors.yml
+++ b/.github/workflows/contributors.yml
@@ -1,7 +1,7 @@
 name: Contributors
 on:
   schedule:
-    - cron: '*/1 * * * *' # At 01:00 on Sunday.
+    - cron: '*/5 * * * *' 
   push:
     branches:
       - master
