--- a/.github/workflows/Contributors.yml
+++ b/.github/workflows/Contributors.yml
@@ -1,7 +1,7 @@
 name: Contributors
 on:
   schedule:
-    - cron: '*/5 * * * *' # At 01:00 on Sunday.
+    - cron: '*/1 * * * *'
   push:
     branches:
       - master
@@ -17,6 +17,6 @@ jobs:
             <g transform="translate({{ x }}, {{ y }})">
               <a xlink:href="{{{ url }}}" class="contributor-link" target="_blank" rel="nofollow sponsored" title="{{{ name }}}" id="{{{ name }}}">
                 <image width="{{ width }}" height="{{ height }}" xlink:href="{{{ avatar }}}" />
-                <text x="32" y="74" text-anchor="middle" alignment-baseline="middle" font-size="10" style="color: red;">{{{ name }}}</text>
+                <text x="32" y="74" text-anchor="middle" alignment-baseline="middle" font-size="10">{{{ name }}}</text>
               </a>
             </g>
