--- a/.github/workflows/Contributors.yml
+++ b/.github/workflows/Contributors.yml
@@ -17,6 +17,7 @@ jobs:
             <g transform="translate({{ x }}, {{ y }})">
               <a xlink:href="{{{ url }}}" class="contributor-link" target="_blank" rel="nofollow sponsored" title="{{{ name }}}" id="{{{ name }}}">
                 <image width="{{ width }}" height="{{ height }}" xlink:href="{{{ avatar }}}" />
-                <text x="32" y="74" text-anchor="middle" alignment-baseline="middle" font-size="12" style="color: red;">{{{ name }}}</text>
+                <style> .red-text { color: red;} </style>
+                <text class ="red-text" x="32" y="74" text-anchor="middle" alignment-baseline="middle" font-size="12">{{{ name }}}</text>
               </a>
             </g>
