--- a/.github/workflows/Contributors.yml
+++ b/.github/workflows/Contributors.yml
@@ -17,6 +17,6 @@ jobs:
             <g transform="translate({{ x }}, {{ y }})">
               <a xlink:href="{{{ url }}}" class="contributor-link" target="_blank" rel="nofollow sponsored" title="{{{ name }}}" id="{{{ name }}}">
                 <image width="{{ width }}" height="{{ height }}" xlink:href="{{{ avatar }}}" />
-                <span style="color: red;"><text x="32" y="74" text-anchor="middle" alignment-baseline="middle" font-size="12">{{{ name }}}</text></span>
+                <text x="32" y="74" text-anchor="middle" alignment-baseline="middle" font-size="12">\033[31m{{{ name }}}</text>
               </a>
             </g>
