--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -3,7 +3,7 @@ name: Prettier
 # This action works with pull requests and pushes
 on:
     pull_request:
-        push:
+    push:
         branches:
             - main
 
@@ -16,7 +16,7 @@ jobs:
               uses: actions/checkout@v2
               with:
                   # Make sure the actual branch is checked out when running on pull requests
-                  ref: ${{ github.head_ref }}
+                  ref: main
                   fetch-depth: 0
                   # This is important to fetch the changes to the previous commit
 
