--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.5.0",
     "react-scripts": "5.0.1",
+    "tw-elements": "^1.0.0-alpha13",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
